--- a/aws/pom.xml
+++ b/aws/pom.xml
@@ -56,28 +56,6 @@
 
 
   <properties>
-<!--
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <auto-service.version>1.0-rc2</auto-service.version>
-    <kotlin.version>1.3.61</kotlin.version>
-    <aws.version>1.11.477</aws.version>
-    <jetty.version>9.4.17.v20190418</jetty.version>
-    <jackson.version>2.10.0.pr1</jackson.version>
-
-
-      <aws-lambda-java-core.version>1.2.0</aws-lambda-java-core.version>
-      <aws-lambda-java-events.version>2.2.6</aws-lambda-java-events.version>
-      <mysql-connector-java.version>8.0.15</mysql-connector-java.version>
-      <postgresql.version>42.2.5</postgresql.version>
-      <mssql-jdbc.version>7.2.1.jre8</mssql-jdbc.version>
-      <mariadb-java-client.version>2.4.0</mariadb-java-client.version>
-      <h2.version>1.4.198</h2.version>
-      <reflections.version>0.9.10</reflections.version>
-      <junit.version>4.13-rc-1</junit.version>
-      <compile-testing.version>0.15</compile-testing.version>
-      <kotlintest-runner-junit5.version>3.3.0</kotlintest-runner-junit5.version>
-      <mockk.version>1.9.3</mockk.version>
--->
   </properties>
 
   <dependencies>
@@ -373,7 +351,7 @@
           </execution>
         </executions>
       </plugin>
-<!--
+<!-- Fails with Java 11
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
