--- a/core/pom.xml
+++ b/core/pom.xml
@@ -56,29 +56,6 @@
 
 
     <properties>
-<!--
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <auto-service.version>1.0-rc6</auto-service.version>
-        <aws.version>1.11.699</aws.version>
-        <jetty.version>9.4.17.v20190418</jetty.version>
-            <joda-time.version>2.10.5</joda-time.version>
-        <jackson.version>2.10.1</jackson.version>
-            <gson.version>2.8.6</gson.version>
-            <guice.version>4.2.2</guice.version>
-        <kotlin.version>1.3.61</kotlin.version>
-            <kotlin-guice.version>1.4.1</kotlin-guice.version>
-            <kotlintest-runner-junit5.version>3.4.2</kotlintest-runner-junit5.version>
-            <junit-jupiter-api.version>5.5.2</junit-jupiter-api.version>
-
-
-                <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-                <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
-                <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
-                        <maven-scm-provider-gitexe.version>1.11.2</maven-scm-provider-gitexe.version>
-                <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
-                <maven-javadoc-plugin.version>3.1.1</maven-javadoc-plugin.version>
-                        <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
--->
     </properties>
 
     <dependencies>
@@ -264,7 +241,7 @@
                     </execution>
                 </executions>
             </plugin>
-<!--
+<!-- fails with Java 11
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
