--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.nimbusframework</groupId>
@@ -52,34 +53,34 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <auto-service.version>1.0-rc6</auto-service.version>
         <aws.version>1.11.699</aws.version>
-      <aws-lambda-java-core.version>1.2.0</aws-lambda-java-core.version>
-      <aws-lambda-java-events.version>2.2.6</aws-lambda-java-events.version>
+        <aws-lambda-java-core.version>1.2.0</aws-lambda-java-core.version>
+        <aws-lambda-java-events.version>2.2.6</aws-lambda-java-events.version>
         <jetty.version>9.4.17.v20190418</jetty.version>
-            <joda-time.version>2.10.5</joda-time.version>
+        <joda-time.version>2.10.5</joda-time.version>
         <jackson.version>2.10.1</jackson.version>
-            <gson.version>2.8.6</gson.version>
-            <guice.version>4.2.2</guice.version>
+        <gson.version>2.8.6</gson.version>
+        <guice.version>4.2.2</guice.version>
         <kotlin.version>1.3.61</kotlin.version>
-            <kotlin-guice.version>1.4.1</kotlin-guice.version>
-            <kotlintest-runner-junit5.version>3.4.2</kotlintest-runner-junit5.version>
-            <junit-jupiter-api.version>5.5.2</junit-jupiter-api.version>
-      <mysql-connector-java.version>8.0.15</mysql-connector-java.version>
-      <postgresql.version>42.2.5</postgresql.version>
-      <mssql-jdbc.version>7.2.1.jre8</mssql-jdbc.version>
-      <mariadb-java-client.version>2.4.0</mariadb-java-client.version>
-      <h2.version>1.4.198</h2.version>
-      <reflections.version>0.9.10</reflections.version>
-      <junit.version>4.13-rc-1</junit.version>
-      <compile-testing.version>0.15</compile-testing.version>
-      <mockk.version>1.9.3</mockk.version>
- 
-                <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-                <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
-                <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
-                        <maven-scm-provider-gitexe.version>1.11.2</maven-scm-provider-gitexe.version>
-                <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
-                <maven-javadoc-plugin.version>3.1.1</maven-javadoc-plugin.version>
-                        <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
+        <kotlin-guice.version>1.4.1</kotlin-guice.version>
+        <kotlintest-runner-junit5.version>3.4.2</kotlintest-runner-junit5.version>
+        <junit-jupiter-api.version>5.5.2</junit-jupiter-api.version>
+        <mysql-connector-java.version>8.0.15</mysql-connector-java.version>
+        <postgresql.version>42.2.5</postgresql.version>
+        <mssql-jdbc.version>7.2.1.jre8</mssql-jdbc.version>
+        <mariadb-java-client.version>2.4.0</mariadb-java-client.version>
+        <h2.version>1.4.198</h2.version>
+        <reflections.version>0.9.10</reflections.version>
+        <junit.version>4.13-rc-1</junit.version>
+        <compile-testing.version>0.15</compile-testing.version>
+        <mockk.version>1.9.3</mockk.version>
+
+        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
+        <maven-release-plugin.version>2.5.3</maven-release-plugin.version>
+        <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
+        <maven-scm-provider-gitexe.version>1.11.2</maven-scm-provider-gitexe.version>
+        <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
+        <maven-javadoc-plugin.version>3.1.1</maven-javadoc-plugin.version>
+        <maven-gpg-plugin.version>1.6</maven-gpg-plugin.version>
 
     </properties>
 
