--- a/aws/pom.xml
+++ b/aws/pom.xml
@@ -286,7 +286,7 @@
           <localCheckout>true</localCheckout>
           <pushChanges>false</pushChanges>
           <mavenExecutorId>forked-path</mavenExecutorId>
-          <arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
+          <arguments>-Dgpg.passphrase=${gpg.passphrase} -Dmaven.javadoc.skip=true</arguments>
         </configuration>
         <dependencies>
           <dependency>
