--- a/core/pom.xml
+++ b/core/pom.xml
@@ -211,7 +211,7 @@
                     <localCheckout>true</localCheckout>
                     <pushChanges>false</pushChanges>
                     <mavenExecutorId>forked-path</mavenExecutorId>
-                    <arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
+                    <arguments>-Dgpg.passphrase=${gpg.passphrase} -Dmaven.javadoc.skip=true</arguments>
                 </configuration>
                 <dependencies>
                     <dependency>
