--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,18 +26,10 @@ jobs:
         # The Java version to make available on the path. Takes a whole or semver Java version, or 1.x syntax (e.g. 1.8 => Java 8.x)
         java-version: 1.11
         
-    - name: Release
-      uses: qcastel/github-actions-maven-release@master
-      with:
-        maven-repo-server-id: ossrh
-        maven-repo-server-username: thomasjallerton
-        maven-repo-server-password: ${{ secrets.REPO_PASSWORD }}
-
-        gpg-enabled: "true"
-        gpg-key-id: ${{ secrets.GPG_KEY_ID }}
-        gpg-key: ${{ secrets.GPG_KEY }}
-
-        git-release-bot-name: "nimbusdeploybot"
-        git-release-bot-email: "nimbusdeploybot@gmail.com"
-
-        access-token: ${{ secrets.BOT_REPO_ACCESS_TOKEN }}
+    - name: Release Maven package
+        uses: samuelmeuli/action-maven-publish@v1
+        with:
+          gpg_private_key: ${{ secrets.GPG_KEY }}
+          gpg_passphrase: ${{ secrets.GPG_PASSWORD }}
+          nexus_username: thomasjallerton
+          nexus_password: ${{ secrets.REPO_PASSWORD }}
