--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         ref: ${{ github.head_ref }}
+        fetch-depth: 0
       
     - name: Setup Java JDK
       uses: actions/setup-java@v1.3.0
