--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,9 +40,6 @@ jobs:
         script: |
           const version = "${{ steps.snapshotversion.outputs.version }}".split('-')[0]
           core.setOutput('version', version)
-          
-    - name: Debug Action
-      uses: hmarr/debug-action@v1.0.0
 
     - name: Set release version
       run: echo $(mvn versions:set -DnewVersion=${{ steps.version.outputs.version }})
@@ -51,6 +48,7 @@ jobs:
       uses: stefanzweifel/git-auto-commit-action@v4.3.0
       with:
         branch: master
+        file_pattern: pom.xml aws/pom.xml core/pom.xml
         tagging_message: '${{ steps.version.outputs.version }}'
         commit_message: Prepare release version
     
