--- a/pom.xml
+++ b/pom.xml
@@ -61,9 +61,9 @@
         <jackson.version>2.10.1</jackson.version>
         <gson.version>2.8.6</gson.version>
         <guice.version>4.2.2</guice.version>
-        <kotlin.version>1.3.61</kotlin.version>
+        <kotlin.version>1.3.70</kotlin.version>
         <kotlin-guice.version>1.4.1</kotlin-guice.version>
-        <kotlintest-runner-junit5.version>3.4.2</kotlintest-runner-junit5.version>
+        <kotest.version>4.2.6</kotest.version>
         <junit-jupiter-api.version>5.5.2</junit-jupiter-api.version>
         <mysql-connector-java.version>8.0.15</mysql-connector-java.version>
         <postgresql.version>42.2.5</postgresql.version>
@@ -94,6 +94,11 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+            </plugin>
+            <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
                 <version>${kotlin.version}</version>
@@ -114,22 +119,17 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <jvmTarget>1.8</jvmTarget>
+                    <jvmTarget>11</jvmTarget>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>versions-maven-plugin</artifactId>
-                <version>${versions-maven-plugin.version}</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven-compiler-plugin.version}</version>
+                <version>3.5.1</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                    <release>${java.version}</release>
+                    <proc>none</proc>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
                 <executions>
                     <!-- Replacing default-compile as it is treated specially by maven -->
@@ -152,9 +152,7 @@
                     <execution>
                         <id>java-test-compile</id>
                         <phase>test-compile</phase>
-                        <goals>
-                            <goal>testCompile</goal>
-                        </goals>
+                        <goals> <goal>testCompile</goal> </goals>
                     </execution>
                 </executions>
             </plugin>
