--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
         <jackson.version>2.10.1</jackson.version>
         <gson.version>2.8.6</gson.version>
         <guice.version>4.2.2</guice.version>
-        <kotlin.version>1.3.61</kotlin.version>
+        <kotlin.version>1.3.70</kotlin.version>
         <kotlin-guice.version>1.4.1</kotlin-guice.version>
         <kotlintest-runner-junit5.version>3.4.2</kotlintest-runner-junit5.version>
         <junit-jupiter-api.version>5.5.2</junit-jupiter-api.version>
@@ -94,6 +94,11 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+            </plugin>
+            <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-maven-plugin</artifactId>
                 <version>${kotlin.version}</version>
@@ -114,7 +119,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <jvmTarget>1.8</jvmTarget>
+                    <jvmTarget>${java.version}</jvmTarget>
                 </configuration>
             </plugin>
             <plugin>
