--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,7 @@
         <kotlin.version>1.3.70</kotlin.version>
         <kotlin-guice.version>1.4.1</kotlin-guice.version>
         <kotlintest-runner-junit5.version>3.4.2</kotlintest-runner-junit5.version>
+        <kotest.version>4.2.6</kotest.version>
         <junit-jupiter-api.version>5.5.2</junit-jupiter-api.version>
         <mysql-connector-java.version>8.0.15</mysql-connector-java.version>
         <postgresql.version>42.2.5</postgresql.version>
