--- a/aws/pom.xml
+++ b/aws/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>nimbus-aws</artifactId>
-    <version>0.14.1-SNAPSHOT</version>
+    <version>0.14.1</version>
     <packaging>jar</packaging>
 
     <name>nimbus-aws</name>
@@ -13,14 +13,14 @@
     <parent>
         <groupId>com.nimbusframework</groupId>
         <artifactId>nimbus-parent</artifactId>
-        <version>0.14.1-SNAPSHOT</version>
+        <version>0.14.1</version>
     </parent>
 
     <dependencies>
         <dependency>
             <groupId>com.nimbusframework</groupId>
             <artifactId>nimbus-core</artifactId>
-            <version>0.14.1-SNAPSHOT</version>
+            <version>0.14.1</version>
         </dependency>
         <dependency>
             <groupId>com.google.auto.service</groupId>
